--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ h2,
 h3,
 h4 {
   color: var(--color-headings);
-  margin-bottom: 2rem;
+  margin-bottom: 1.5rem;
 }
 
 h1 {
@@ -112,4 +112,26 @@ a {
   .badge--small {
     font-size: 1.2rem;
   }
+}
+
+/* list */
+
+.list {
+  list-style: none;
+  padding-left: 0;
+  color: var(--color-headings);
+}
+
+.list--inline .list__items {
+  display: inline-block;
+  margin-right: 1.5rem;
+}
+
+.list--tick {
+  list-style-image: url(../Images/tick.svg);
+}
+
+.list--tick .list__items {
+  padding-right: 0.5rem;
+  margin-bottom: 1rem;
 }
