Cards primary and secondary

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ html {
 body {
   color: var(--color-body);
   font-family: Inter, Arial, Helvetica, sans-serif;
-  font-size: 2.4rem;
+  font-size: 1.8rem;
   line-height: 1.5; /* 1.5 of current font */
 }
 
@@ -261,4 +261,25 @@ a {
   .input {
     font-size: 1.5rem;
   }
+}
+
+/* Card */
+
+.card {
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 0 10px #999;
+}
+
+.card__header,
+.card__body {
+  padding: 2rem 3rem;
+}
+.card-primary .card__header {
+  background: var(--color-primary);
+  color: #fff;
+}
+.card-secondary .card__header {
+  background: var(--color-secondary);
+  color: #fff;
 }
