--- a/css/styles.css
+++ b/css/styles.css
@@ -340,3 +340,69 @@ a {
   display: flex;
   justify-content: center;
 }
+
+@media screen and (min-width: 1024px) {
+  .plan__name {
+    font-size: 1.4rem;
+  }
+
+  .plan__price {
+    font-size: 5rem;
+  }
+
+  .plan__billing-cycle {
+    font-size: 1.6rem;
+  }
+
+  .plan__description {
+    font-size: 1.7rem;
+  }
+}
+/* Media */
+.media {
+  display: flex;
+}
+
+.media__title {
+  margin-top: 0;
+}
+
+.media__body {
+  margin: 0 2rem;
+}
+
+.media__image {
+  margin-top: 1rem;
+}
+
+/* Quotes */
+.quote {
+  font-size: 3rem;
+}
+.quote__text {
+  font-style: italic;
+  font-weight: 500;
+  margin-bottom: 0.5rem;
+  line-height: 1.3;
+}
+.quote__text::before {
+  content: open-quote;
+}
+.quote__text::after {
+  content: close-quote;
+}
+
+.quote__author {
+  font-weight: 500;
+  margin-bottom: 0;
+}
+
+.quote__org {
+  font-size: 2rem;
+  opacity: 0.6;
+}
+
+.quote__line {
+  position: relative;
+  bottom: 10px;
+}
