--- a/css/styles.css
+++ b/css/styles.css
@@ -154,6 +154,9 @@ a {
 .icon--primary {
   fill: var(--color-primary);
 }
+.icon--white {
+  fill: white;
+}
 
 .icon-container {
   background: #c0c3de;
@@ -165,6 +168,9 @@ a {
   align-items: center;
 }
 
+.icon-container--accent {
+  background-color: var(--color-accent);
+}
 /* Buttons */
 
 .btn {
@@ -405,4 +411,54 @@ a {
 .quote__line {
   position: relative;
   bottom: 10px;
+}
+
+/* Grids */
+
+.grid {
+  display: grid;
+}
+
+@media screen and (min-width: 768px) {
+  .grid--1x2 {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .grid--1x3 {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+/* Testimonial */
+
+.testimonial {
+  padding: 3rem;
+}
+.testimonial-image {
+  position: relative;
+}
+
+.testimonial-image > img /*direct child selector*/ {
+  width: 100%;
+}
+
+.testimonial-image > .icon-container {
+  position: absolute;
+  top: 3rem;
+  right: -32px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .testimonial .quote__text,
+  .testimonial .quote__author {
+    font-size: 2.4rem;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .testimonial .quote {
+    margin-left: 6rem;
+  }
 }
