--- a/css/styles.css
+++ b/css/styles.css
@@ -462,3 +462,40 @@ a {
     margin-left: 6rem;
   }
 }
+
+/* Callout */
+
+.callout {
+  border-radius: 20px;
+  padding: 2rem;
+}
+
+.callout--primary {
+  background-color: var(--color-primary);
+  color: #fff;
+}
+
+.callout__content {
+  text-align: center;
+}
+.callout .btn {
+  justify-self: center;
+  align-self: center;
+}
+
+.callout__content > h2 {
+  margin-top: 1rem;
+}
+
+@media screen and (min-width: 768px) {
+  .callout .grid--1x2 {
+    grid-template-columns: 1fr auto;
+  }
+  .callout__content {
+    text-align: left;
+  }
+  .callout .btn {
+    justify-self: start;
+    margin: 0 2rem;
+  }
+}
