--- a/css/styles.css
+++ b/css/styles.css
@@ -520,7 +520,7 @@ a {
   max-height: 0;
   overflow: hidden;
   opacity: 0;
-  transition: all 0.5s; /*all for transforming all properties*/
+  transition: opacity 0.3s; /*all for transforming all properties*/
 }
 
 .collapsible--expanded .collapsible__chevron {
@@ -529,9 +529,6 @@ a {
 .collapsible--expanded .collapsible__content {
   max-height: 100vh;
   opacity: 1;
-}
-.collapsible--expanded .list {
-  margin-top: 0;
 }
 
 /* Blocks */
@@ -566,4 +563,58 @@ a {
 .block--skewed-left {
   padding-bottom: calc(var(--padding-vertical) + 4rem);
   clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 0% 100%);
+}
+
+/* Navigation bar/panel */
+
+.navbar {
+  background: #000;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 0 0.5rem;
+  align-items: center;
+}
+
+.nav__list {
+  width: 100%;
+  margin: 0.5rem;
+}
+
+.nav__item {
+  padding: 0.5rem 2rem;
+  border-bottom: #333 1px solid;
+}
+
+.nav__item > a {
+  color: #aaa;
+}
+
+.nav__item > a:hover {
+  color: #fff;
+}
+
+.nav__toggler {
+  opacity: 0.5;
+}
+.navbar.collapsible--expanded .nav__toggler {
+  opacity: 1;
+  box-shadow: 0 0 0 3px #777;
+  border-radius: 5px;
+}
+
+@media screen and (min-width: 768px) {
+  .nav__toggler {
+    display: none;
+  }
+  .nav__list {
+    width: auto;
+    display: flex;
+    font-size: 1.6rem;
+    max-height: 100%;
+    opacity: 1;
+  }
+  .nav__item {
+    border: 0;
+  }
 }
