Plans block and updating plans.html in earlier commit

--- a/css/styles.css
+++ b/css/styles.css
@@ -302,7 +302,6 @@ a {
 /* Plans */
 
 .plan {
-  width: 25%;
   padding: 2rem;
   transition: transform 0.2s;
 }
@@ -334,6 +333,10 @@ a {
   margin-bottom: 2rem;
 }
 
+.plan--popular {
+  transform: scale(1.1);
+}
+
 .plan--popular .card__header {
   position: relative;
 }
@@ -349,11 +352,8 @@ a {
 .plan:hover {
   transform: scale(1.1);
 }
-
-.plan--container {
-  margin-top: 2rem;
-  display: flex;
-  justify-content: center;
+.plan--popular:hover {
+  transform: scale(1.15);
 }
 
 @media screen and (min-width: 1024px) {
@@ -686,4 +686,10 @@ a {
   .block--domain__prices {
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
   }
+}
+
+/* Plans Block */
+.block--plans .card {
+  margin: 2rem auto;
+  max-width: 500px;
 }
