Features and support images

--- a/css/styles.css
+++ b/css/styles.css
@@ -693,3 +693,19 @@ a {
   margin: 2rem auto;
   max-width: 500px;
 }
+
+/* Features (Articles that are independent from the main content of webpage) */
+.feature {
+  gap: 4rem 2rem /*row cols*/;
+  margin: 5rem 0;
+}
+
+.feature__heading {
+  margin-top: 1rem;
+}
+
+@media screen and (min-width: 768px) {
+  .feature:nth-of-type(even) .feature__content {
+    order: 2;
+  }
+}
