--- a/Component/collapsible.html
+++ b/Component/collapsible.html
@@ -6,13 +6,13 @@
         <use xlink:href="Images/sprite.svg#chevron"></use>
       </svg>
     </header>
-    <footer class="collapsible__content">
+    <div class="collapsible__content">
       <ul class="list">
         <li>item 1</li>
         <li>item 2</li>
         <li>item 3</li>
       </ul>
-    </footer>
+    </div>
   </div>
 </body>
 <script src="js/main.js"></script>
