--- a/css/styles.css
+++ b/css/styles.css
@@ -127,6 +127,7 @@ a {
 .list {
   list-style: none;
   padding-left: 0;
+  margin-top: 0;
 }
 
 .list--inline .list__items {
@@ -729,5 +730,69 @@ a {
   .block-showcase__image {
     justify-self: end;
     width: auto;
+  }
+}
+
+/* Footer */
+
+.footer {
+  background-color: #232323;
+}
+
+.footer__section {
+  border-bottom: solid 1px #393939;
+  padding-top: 1rem;
+}
+
+.footer a {
+  color: #777;
+  transition: color 0.3sec;
+}
+
+.footer a:hover {
+  color: #fff;
+}
+
+.footer__heading {
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 2rem;
+}
+
+.footer__brand {
+  padding: 2rem 0;
+  text-align: center;
+}
+
+.footer__brand > img {
+  width: 100%;
+  max-width: 200px;
+}
+
+.footer__copyright {
+  opacity: 0.3;
+  color: #fff;
+  font-size: 1.3rem;
+}
+
+@media screen and (min-width: 768px) {
+  .footer .grid {
+    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+  }
+  .footer .collapsible__chevron {
+    display: none;
+  }
+  .footer .collapsible__content {
+    max-height: 100%;
+    opacity: 1;
+  }
+  .footer__section {
+    border: 0;
+  }
+  .footer .footer__brand {
+    order: -1;
+  }
+  .footer__heading {
+    font-size: 1.8rem;
   }
 }
