--- a/css/styles.css
+++ b/css/styles.css
@@ -99,6 +99,7 @@ a {
   font-weight: 600;
   padding: 0.5rem 2rem;
   white-space: nowrap; /* text will not go on 2nd line  */
+  /* margin-top: 2px; */
 }
 
 .badge--primary {
@@ -107,6 +108,7 @@ a {
 
 .badge--secondary {
   background-color: var(--color-secondary);
+  transition: 0.3s;
 }
 
 .badge--small {
@@ -333,6 +335,7 @@ a {
   display: block;
   font-weight: 300;
   word-spacing: 1px;
+  margin-top: 5px;
 }
 
 .plan .list__item {
@@ -353,7 +356,7 @@ a {
   width: 35px;
   position: absolute;
   top: -6px;
-  right: 5%;
+  right: 3%;
 }
 .plan:hover {
   transform: scale(1.05);
@@ -554,7 +557,7 @@ a {
 /* Blocks */
 
 .block {
-  --padding-vertical: 4rem;
+  --padding-vertical: 2rem;
   padding: var(--padding-vertical) 2rem;
   border-collapse: collapse;
 }
@@ -587,6 +590,12 @@ a {
 .block--skewed-left {
   padding-bottom: calc(var(--padding-vertical) + 4rem);
   clip-path: polygon(0% 0%, 100% 0%, 100% 95%, 0% 100%);
+}
+
+@media screen and (min-width: 768px) {
+  .block {
+    --padding-vertical: 4rem;
+  }
 }
 
 /* Navigation bar/panel */
@@ -688,7 +697,7 @@ a {
   color: var(--color-headings);
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 6rem);
+  grid-template-rows: repeat(3, 5rem);
   justify-items: center;
   font-size: 2rem;
   font-weight: 600;
@@ -699,6 +708,7 @@ a {
 @media screen and (min-width: 768px) {
   .block--domain__prices {
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+    grid-template-rows: none;
   }
 }
 
